@@ -7,7 +7,7 @@
 # Copyright (c) 2001 by Andreas Kupries <a.kupries@westend.com>
 # All rights reserved.
 #
-# RCS: @(#) $Id: csv.test,v 1.6 2002/06/24 23:17:26 andreas_kupries Exp $
+# RCS: @(#) $Id: csv.test,v 1.7 2003/03/31 22:24:41 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -192,8 +192,20 @@ test csv-1.15-4 {split empty fields} {
     csv::split {1,"",3,""}
 } {1 {"} 3 {"}}
 
+# Try various separator characters
 
-
+foreach {n sep} {
+    0  |    1  +    2  *
+    3  /    4  \    5  [
+    6  ]    7  (    8  )
+    9  ?    10 ,    11 ;
+    12 .    13 -    14 =
+    15 :
+} {
+    test csv-1.16-$n "split on $sep" {
+	::csv::split [join [list REC DPI AD1 AD2 AD3] $sep] $sep
+    } {REC DPI AD1 AD2 AD3}
+}
 
 test csv-2.1 {join} {
     csv::join {123 {"a"} {} hello}
